Fix margins on tablet and desktop in Value props

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   margin: 0;
   background-color: #f9f9f6;
+  line-height:
 }
 
 @tailwind base;
